# mlcc

./: .gitignore  Untitled.ipynb  intro.ipynb  intro.py  intro_to_computer_vision.ipynb  linear regression.ipynb  main.py  mnist_example.ipynb  pyproject.toml  vscode_play.ipynb
