[project]
name = "mlcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-ml-edu>=0.1.3",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "python-lsp-server[all]>=1.14.0",
    "tensorflow>=2.16.2",
    "tensorflow-macos>=2.16.2",
    "tensorflow-metal>=1.2.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
]
